fixed scrollbar bug

--- a/reel/styles.css
+++ b/reel/styles.css
@@ -125,8 +125,8 @@ ul {
   background-color: var(--color-dark);
   background-image: linear-gradient(
     var(--color-dark) 0,
-    var(--color-dark) 0.125rem,
-    var(--color-light) 0.125rem,
+    var(--color-dark) 0.1rem,
+    var(--color-light) 0.1rem,
     var(--color-light) 0.375rem,
     var(--color-dark) 0.375rem
   );
